fix: missing gender field
